<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/palm"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/layoutWidthForWeight"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextViews"
                android:layout_margin="@dimen/margin8"
                android:text="@string/team_name1"
                android:textSize="@dimen/textSizeTeam" />

            <TextView
                android:id="@+id/ScoreTeam1"
                style="@style/TextViews"
                android:layout_margin="@dimen/margin16"
                android:text="@string/score_team1"
                android:textSize="@dimen/textSizeScore" />

            <Button
                style="@style/ButtonsOther"
                android:onClick="addTouchdown_team1"
                android:text="@string/touchdown" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin4"
                android:layout_marginRight="@dimen/margin4"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/pointAfterTouchdown_team1"
                    style="@style/ButtonsAfterTouchdown"
                    android:onClick="addPointAfterTouchdown_team1"
                    android:text="@string/extra_point" />

                <Button
                    android:id="@+id/twoPointConversion_team1"
                    style="@style/ButtonsAfterTouchdown"
                    android:onClick="addTwoPointConversion_team1"
                    android:text="@string/two_point_conversion" />
            </LinearLayout>

            <Button
                style="@style/ButtonsOther"
                android:onClick="addFieldGoal_team1"
                android:text="@string/field_goal" />

            <Button
                style="@style/ButtonsOther"
                android:onClick="addSafety_team1"
                android:text="@string/safety" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/viewWidth"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin8"
            android:background="@color/colorBlack" />

        <LinearLayout
            android:layout_width="@dimen/layoutWidthForWeight"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextViews"
                android:layout_margin="@dimen/margin8"
                android:text="@string/team_name2"
                android:textSize="@dimen/textSizeTeam" />

            <TextView
                android:id="@+id/ScoreTeam2"
                style="@style/TextViews"
                android:layout_margin="@dimen/margin16"
                android:text="@string/score_team2"
                android:textSize="@dimen/textSizeScore" />

            <Button
                style="@style/ButtonsOther"
                android:onClick="addTouchdown_team2"
                android:text="@string/touchdown" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin4"
                android:layout_marginRight="@dimen/margin4"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/pointAfterTouchdown_team2"
                    style="@style/ButtonsAfterTouchdown"
                    android:onClick="addPointAfterTouchdown_team2"
                    android:text="@string/extra_point" />

                <Button
                    android:id="@+id/twoPointConversion_team2"
                    style="@style/ButtonsAfterTouchdown"
                    android:onClick="addTwoPointConversion_team2"
                    android:text="@string/two_point_conversion" />
            </LinearLayout>

            <Button
                style="@style/ButtonsOther"
                android:onClick="addFieldGoal_team2"
                android:text="@string/field_goal" />

            <Button
                style="@style/ButtonsOther"
                android:onClick="addSafety_team2"
                android:text="@string/safety" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin24"
        android:onClick="resetScore"
        android:text="@string/reset" />
</RelativeLayout>
